refactor(change-mgmt): migrate ECO to correct modules + simplify fixes
Layer migration:
- Move ChangeOrder entity → backend-domain (extends BaseEntity, @SuperBuilder)
- Move ChangeOrderRepository → backend-repository (add COUNT query)
- Move ChangeOrderServiceImpl/DTO/Request/Interface → backend-service
- Move GraphAnalysisService, ImpactAnalyzerService, MLServiceClient → backend-service
- Move all AI DTOs → backend-service/ai/dto

Simplify fixes applied:
- ChangeOrder now inherits id, createdAt, updatedAt, createdBy, updatedBy, isDeleted, @Version from BaseEntity (removes 5 duplicate fields + Instant→LocalDateTime)
- Replace ResponseStatusException with ResourceNotFoundException/BusinessException in service layer
- Add countByContextIdAndIsDeletedFalse() to avoid N+1 in generateEcoNumber()
- Constructor injection (@RequiredArgsConstructor) replaces @Autowired field injection in GraphAnalysisService, ImpactAnalyzerService, ImpactAnalysisController
- Add @Transactional(readOnly=true) to all read-only service methods
- ChangeOrderCreateRequest.priority typed as ChangeOrder.Priority enum (not raw String)
- .toList() replaces .collect(Collectors.toList())
- Expand single-letter variable names in ImpactAnalyzerService helpers
- GlobalExceptionHandler gains ResourceNotFoundException→404 and BusinessException→409 handlers

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>